fixed review button spacing

--- a/frontend/src/components/CreateReviewModal/CreateReview.css
+++ b/frontend/src/components/CreateReviewModal/CreateReview.css
@@ -39,6 +39,7 @@ flex-direction: column;
   width: 300px;
   height: 50px;
   box-shadow: 1px 5px 5px black;
+  margin: 20px;
 }
 
 .submitreviewbutton:disabled {
