--- a/frontend/src/components/DeleteReviewModal/DeleteReview.css
+++ b/frontend/src/components/DeleteReviewModal/DeleteReview.css
@@ -21,7 +21,7 @@
     width: 300px;
     height: 50px;
     box-shadow: 1px 5px 5px black;
-    margin: 5px;
+    margin: 15px;
 
 }
 
